# Sirius_vkr

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py  seed_demo.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  courses.py  data.py  enrollments.py  groups.py  jobs.py  portal.py  privacy.py  schedule.py  students.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  consent.py  job.py  learning.py  pseudonym.py  student.py  subject_request.py  user.py
backend/app/queue/: publisher.py
backend/app/schemas/: auth.py  job.py  learning.py  privacy.py
backend/app/services/: auth_service.py  job_service.py  learning_service.py  privacy_service.py
backend/migrations/: env.py
backend/migrations/versions/: 20250605_c1a2b3d4e5f6_initial_tables.py  20260613_a1b2c3d4e5f6_auth_roles_pii_encryption.py  20260614_b2c3d4e5f6a7_pii_func_grants_least_privilege.py  20260615_c3d4e5f6a7b8_subject_request.py  20260617_d4e5f6a7b8c9_learning_portal_content.py
db/init/: 01-init.sh
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
tools/: gen_synthetic_data.py  pyproject.toml
worker/: Dockerfile  README.md  go.mod  go.sum
worker/cmd/worker/: main.go
worker/internal/anonymizer/: anonymizer.go  csv.go  kanon.go  report.go  transform.go
worker/internal/config/: config.go
worker/internal/consumer/: consumer.go
worker/internal/importer/: importer.go  reader.go  report.go  validate.go
worker/internal/job/: job.go
worker/internal/store/: store.go
(+98 files in other folders)
