[project]
name = "sirius27-backend"
version = "0.1.0"
description = "Сириус 27 — Backend API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "pyjwt>=2.10.0",
    "pwdlib[bcrypt]>=0.2.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# E501: line length handled by the formatter.
# B008: FastAPI's Depends() in defaults is intentional.
# RUF012: SQLAlchemy's `__table_args__` is a mutable-default false positive;
#         annotating it with ClassVar (ruff's fix) breaks mypy's override check.
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
# The demo seed is intentionally full of Russian demo strings and ships a
# Cyrillic→Latin transliteration table, so confusable-character checks (RUF001
# string / RUF002 docstring / RUF003 comment) fire by design — silence them
# here rather than littering the file with per-line noqa.
"app/seed_demo.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
